<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">辩论</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_gxts">新版本</string>
    <string name="welcome_gx">立即更新</string>
    <string name="welcome_gxwait">稍后再说</string>
    <string name="welcome_gxzt">升级中,请稍候...</string>
    <string name="update_progress_num">%1$s/%2$s</string>
    <string name="networkoff">无可用网络</string>
    <string name="networktimeout">网络连接超时</string>
    <string name="hostrefuse">服务器错误</string>
    <string name="loading">加载中...</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="main_menu_string">主菜单</string>
    <string name="setting_string">系统设置</string>
    <string name="smart_home_string">智能家居</string>
    <string name="experience">立即体验</string>
    <string name="back_string">返回</string>
    <string name="account_name_string">账号：</string>
    <string name="account_name_hint">请输入用户名</string>
    <string name="account_pw_string">密码：</string>
    <string name="account_pw_hint">请输入密码</string>
    <string name="login_btn_string">立即登录</string>
    <string name="forget_pwd_string">忘记密码?</string>
    <string name="register_new_user_string">新用户注册</string>
    <string name="register_type_string">注册方式：</string>
    <string name="register_phone_string">手机</string>
    <string name="register_email_string">邮箱</string>
    <string name="phonenum_string">手机号：</string>
    <string name="phonenum_hint_string">请输入手机号</string>
    <string name="username_hint_string">请输入用户名</string>
    <string name="username_string">用户名：</string>
    <string name="password_string">密码：</string>
    <string name="password_hint_string">请输入密码(6&#8211;20个字符)</string>
    <string name="password_again_string">确认密码：</string>
    <string name="password_again_hint_string">请再次输入密码</string>
    <string name="code_string">验证码：</string>
    <string name="code_hint_string">请输入验证码</string>
    <string name="nickname_string">用户名：</string>
    <string name="nickname_hint_string">请输入用户名</string>
    <string name="get_code_string">获取验证码</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="phonenum_null_string">手机号不能为空</string>
    <string name="phonenum_error_string">请输入正确的手机号码</string>
    <string name="email_null_string">邮箱地址不能为空</string>
    <string name="email_error_string">请输入正确的邮箱地址</string>
    <string name="sms_null_string">验证码不能为空</string>
    <string name="nickname_null_string">昵称不能为空</string>
    <string name="password_null_string">密码不能为空</string>
    <string name="password_error_string">密码不足6个字符</string>
    <string name="confirmPw_null_string">确认密码不能为空</string>
    <string name="email_hint_string">请输入邮箱地址</string>
    <string name="confirmPw_error_string">两次输入的密码不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="commit_string">提交</string>
    <string name="register_btn_string">立即注册</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="find_pw_title">找回密码</string>
    <string name="count_down_re_verify">%1$s秒后可重新获取</string>
    <string name="complete_info_string">完善资料</string>
    <string name="register_send_sms_error">验证码获取失败，请确认您的手机号码</string>
    <string name="verify_sms_code_error">验证码错误</string>
    <string name="account_null_string">账号不能为空</string>
    <string name="account_error_string">请输入正确的手机号</string>
    <string name="reset_pwd_error">重置密碼失敗</string>
    <string name="toast_login_now">正在登录</string>
        <string name="login_success_string">登录成功</string>
    <string name="login_failed_string">登录失败</string>

</resources>