<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_title_height"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/backLl"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@drawable/jt_left" />
        </LinearLayout>

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_title"
            android:textColor="#666666"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e2e2e2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp" >

                <TextView
                    android:id="@+id/phoneTextString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenum_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phoneNumEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:hint="@string/phonenum_hint_string"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingRight="12dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/phoneCodeLine"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2" />

            <LinearLayout
                android:id="@+id/phoneCodeLl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" >

                <TextView
                    android:id="@+id/codeTextString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phoneCodeEdit"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/code_hint_string"
                    android:paddingRight="10dp"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/getPhoneCodeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/get_code_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp" >

                <TextView
                    android:id="@+id/nickTextString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/nickNameEdit"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/nickname_hint_string"
                    android:paddingRight="12dp"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp" >

                <TextView
                    android:id="@+id/passwordString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:hint="@string/password_hint_string"
                    android:inputType="textPassword"
                    android:paddingRight="12dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp" >

                <TextView
                    android:id="@+id/confirmPasswordString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_again_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/confirmPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:hint="@string/password_again_hint_string"
                    android:inputType="textPassword"
                    android:paddingRight="12dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/codeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_string"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/codeEdit"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/code_hint_string"
                    android:paddingRight="10dp"
                    android:textColor="#666666"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/codeimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/login_selector"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register_btn_string"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>